service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-fastapi-app
spec:
  selector:
    app: sample-fastapi-app
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
